--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-iphone-x-helper",
+  "name": "rn-iphone-x-helper",
   "version": "2.0.0",
   "description": "A library to help you design your react-native app for the iPhone X",
   "main": "index.js",
