--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rn-iphone-x-helper",
-  "version": "2.0.0",
+  "name": "rn-iphone-helper",
+  "version": "1.0.0",
   "description": "A library to help you design your react-native app for the iPhone X",
   "main": "index.js",
   "types": "index.d.ts",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/4TWIGGERS/rn-iphone-x-helper.git"
+    "url": "git+https://github.com/4TWIGGERS/rn-iphone-helper.git"
   },
   "keywords": [
     "react-native",
@@ -21,9 +21,9 @@
   "author": "Alexander Pataridze",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/4TWIGGERS/rn-iphone-x-helper/issues"
+    "url": "https://github.com/4TWIGGERS/rn-iphone-helper/issues"
   },
-  "homepage": "https://github.com/4TWIGGERS/rn-iphone-x-helper#readme",
+  "homepage": "https://github.com/4TWIGGERS/rn-iphone-helper#readme",
   "peerDependencies": {
     "react-native": ">=0.42.0"
   }
