--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rn-iphone-helper",
-  "version": "1.0.0",
-  "description": "A library to help you design your react-native app for the iPhone X",
+  "version": "1.0.1",
+  "description": "A library to help you design your react-native app for the iPhone X. Based on Elad Gil's react-native-iphone-x-helper.",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
