--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/4TWIGGERS/rn-iphone-helper#readme",
   "peerDependencies": {
-    "expo-device": ">=5.0.0",
+    "expo-device": "*",
     "react-native": ">=0.42.0",
     "react-native-device-info": "*"
   },
